[package]
name = "k_means"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
plotters = "0.3.5"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
